--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-calendar": "^0.28.28",
     "angular-oauth2-oidc": "^12.1.0",
+    "angularx-qrcode": "^12.0.3",
     "chart.js": "^2.9.4",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
