--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -30,6 +30,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-calendar": "^0.28.28",
+    "angular-code-input": "^1.6.0",
     "angular-oauth2-oidc": "^12.1.0",
     "angularx-qrcode": "^12.0.3",
     "chart.js": "^2.9.4",
