tg-7842 [P1] Se puede editar y eliminar documentos de episodio de internacion cerrado

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_40.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_40.yml
@@ -1,5 +1,13 @@
 databaseChangeLog: 
-    - logicalFilePath: incrementales-v1_40 
+    - logicalFilePath: incrementales-v1_40
+
+    - changeSet:
+        id: update-patient_discharge-medical_discharge_date
+        author: jvaldez
+        changes:
+          - sql:
+              sql: |-
+                UPDATE patient_discharge SET medical_discharge_date = administrative_discharge_date WHERE medical_discharge_date IS NULL AND administrative_discharge_date IS NOT NULL;
 
 
     - changeSet:
