tg-7923 Agrega mailhog a docker-compose

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -68,11 +68,11 @@ app.notification.mail.from=hsi@pladema.net
 app.notification.mail.fromFullname=HSI
 
 spring.mail.host=${SMTP_HOST:}
-spring.mail.port=${SMTP_PORT:}
+spring.mail.port=${SMTP_PORT:465}
 spring.mail.username=${SMTP_USERNAME:}
 spring.mail.password=${SMTP_PASS:}
 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.starttls.enable=${SMTP_SSL:true}
+spring.mail.properties.mail.smtp.starttls.required=${SMTP_SSL:true}
 spring.mail.properties.mail.transport.protocol=smtp
