--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -55,11 +55,13 @@ app.feature.HABILITAR_LLAMADO=${HABILITAR_LLAMADO:true}
 habilitar.boton.consulta=true
 
 # =============================================================================
-# EnvÃ­os de mails
+# Envíos de mails
 # =============================================================================
-#spring.mail.host=smtp.mailgun.org
-#spring.mail.username=postmaster@sandbox7e2b48a345fc44e39ccf56f6ce2a5a34.mailgun.org
-#spring.mail.password=8c51b8aca9e1b59203eaaf5f11bf4883-100b5c8d-997441e7
-#spring.mail.port=587
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
 
 #logging.level.ar.lamansys.sgx.shared.restclient=DEBUG
+
