Comienza desarrollo de 1.41

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -202,3 +202,7 @@ databaseChangeLog:
 
 # Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
 
+
+- include:
+    file: incrementales-v1_41.yml
+    relativeToChangelogFile: true
