tg-7923 Agrega dirección de respuesta en mails

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -55,13 +55,13 @@ app.feature.HABILITAR_LLAMADO=${HABILITAR_LLAMADO:true}
 habilitar.boton.consulta=true
 
 # =============================================================================
-# Envíos de mails
+# Envï¿½os de mails
 # =============================================================================
 spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.starttls.required=false
 
 #logging.level.ar.lamansys.sgx.shared.restclient=DEBUG
-
