--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -66,6 +66,7 @@ app.system.properties.cron.config=0 0/10 * * * *
 # =============== EMAIL =================
 app.notification.mail.from=hsi@pladema.net
 app.notification.mail.fromFullname=HSI
+app.notification.mail.replyTo=no-reply@pladema.net
 
 spring.mail.host=${SMTP_HOST:}
 spring.mail.port=${SMTP_PORT:465}
@@ -73,6 +74,7 @@ spring.mail.username=${SMTP_USERNAME:}
 spring.mail.password=${SMTP_PASS:}
 
 spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.ssl.enable=${SMTP_SSL:true}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_SSL:true}
 spring.mail.properties.mail.smtp.starttls.required=${SMTP_SSL:true}
 spring.mail.properties.mail.transport.protocol=smtp
