tg-7636 Formateo de sgx-shared

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -2,14 +2,14 @@
 # = WEB
 # ===============================
 spring.main.allow-bean-definition-overriding=true
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 
 springdoc.swagger-ui.show-extensions=true
 springdoc.swagger-ui.show-common-extensions=true
-server.error.include-message=always
-server.error.include-binding-errors=always
 springdoc.use-fqn=true
 
 # = Jackson
@@ -43,6 +43,9 @@ management.info.git.mode=full
 actuator.configuration.whitelist=${ACTUATOR_WHITELIST:0:0:0:0:0:0:0:1}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
+app.default.language=${DEFAULT_LANGUAGE:es-AR}
+app.other.languages=${OTHER_LANGUAGES:en-US}
+
 # ===============================
 # = MULTIPART (MultipartProperties)
 # ===============================
@@ -63,7 +66,7 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 
 app.system.properties.cron.config=0 0/10 * * * *
 
-# =============== EMAIL =================
+# ================= EMAIL ===================
 app.notification.mail.from=hsi@pladema.net
 app.notification.mail.fromFullname=HSI
 app.notification.mail.replyTo=no-reply@pladema.net
@@ -78,3 +81,19 @@ spring.mail.properties.mail.smtp.ssl.enable=${SMTP_SSL:true}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_SSL:true}
 spring.mail.properties.mail.smtp.starttls.required=${SMTP_SSL:true}
 spring.mail.properties.mail.transport.protocol=smtp
+
+# =========== JPA / HIBERNATE ===============
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.validationQuery = SELECT 1
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# ===============================
+# reCaptcha Google
+# ===============================
+google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:test-key}
+google.recaptcha.site.key=${RECAPTCHA_PUBLIC_KEY:test-key}
+google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
+google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
