tg-8018 Agregar mensaje de saludo al cuerpo del mail

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -43,7 +43,7 @@ management.info.git.mode=full
 actuator.configuration.whitelist=${ACTUATOR_WHITELIST:0:0:0:0:0:0:0:1}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
-app.default.language=${DEFAULT_LANGUAGE:es-AR}
+app.default.language=${DEFAULT_LANGUAGE:es}
 app.other.languages=${OTHER_LANGUAGES:en-US}
 
 # ===============================
