--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^2.9.4",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
+    "jasmine-marbles": "^0.8.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "ng-recaptcha": "^8.0.1",
