tg-8051 [P1] Error 500 en nueva orden de internación.

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -83,7 +83,7 @@ spring.mail.properties.mail.smtp.starttls.required=${SMTP_SSL:true}
 spring.mail.properties.mail.transport.protocol=smtp
 
 # =========== JPA / HIBERNATE ===============
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=ar.lamansys.sgx.shared.repositories.dialect.CustomPostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.validationQuery = SELECT 1
 
