tg-8106 Permite la configuración de un proxy http

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -72,7 +72,16 @@ spring.mail.port=${SMTP_PORT:}
 spring.mail.username=${SMTP_USERNAME:}
 spring.mail.password=${SMTP_PASS:}
 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.ssl.enable=${SMTP_SSL:true}
+spring.mail.properties.mail.smtp.starttls.enable=${SMTP_SSL:true}
+spring.mail.properties.mail.smtp.starttls.required=${SMTP_SSL:true}
 spring.mail.properties.mail.transport.protocol=smtp
+
+# Http Client
+
+app.http.client.trustInvalidCertificate=false
+app.http.client.timeout=15000
+app.http.client.proxyHost=
+app.http.client.proxyPort=
+
