tg-8106 Permite la configuración de un proxy http

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -97,3 +97,10 @@ google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:test-key}
 google.recaptcha.site.key=${RECAPTCHA_PUBLIC_KEY:test-key}
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
+
+# Http Client
+
+app.http.client.trustInvalidCertificate=false
+app.http.client.timeout=15000
+app.http.client.proxyHost=
+app.http.client.proxyPort=
