tg-8147. [BE] Reducir timeout request externo, agregar propiedad para liberar conexiones

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -89,6 +89,7 @@ spring.datasource.validationQuery = SELECT 1
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
 
 # ===============================
 # reCaptcha Google
@@ -101,6 +102,6 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
 # Http Client
 
 app.http.client.trustInvalidCertificate=false
-app.http.client.timeout=15000
+app.http.client.timeout=3000
 app.http.client.proxyHost=
 app.http.client.proxyPort=
