tg-8167. [P1] Error 500 en búsqueda de paciente

--- a/back-end/hospital-api/src/main/resources/hospital.properties
+++ b/back-end/hospital-api/src/main/resources/hospital.properties
@@ -71,3 +71,4 @@ scheduledjobs.federatepatients.dayofweek=*
 # ===============================
 ws.federar.claims.aud=${ws.federar.url.base}/bus-auth/auth
 
+ws.renaper.request.timeout=3000
