--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -89,7 +89,7 @@ spring.datasource.validationQuery = SELECT 1
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false
 
 # ===============================
 # reCaptcha Google
