Comienza desarrollo de 1.42

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -205,3 +205,7 @@ databaseChangeLog:
     relativeToChangelogFile: true
 
 # Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
+
+- include:
+    file: incrementales-v1_42.yml
+    relativeToChangelogFile: true
