tg-8191 HotFix ignorar proxy en cubejs

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -103,5 +103,4 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
 
 app.http.client.trustInvalidCertificate=false
 app.http.client.timeout=3000
-app.http.client.proxyHost=
-app.http.client.proxyPort=
+#app.http.client.proxy=http://127.0.0.1:3128
