tg-8191 HotFix ignorar proxy en cubejs

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -81,7 +81,5 @@ spring.mail.properties.mail.transport.protocol=smtp
 # Http Client
 
 app.http.client.trustInvalidCertificate=false
-app.http.client.timeout=15000
-app.http.client.proxyHost=
-app.http.client.proxyPort=
-
+app.http.client.timeout=5000
+#app.http.client.proxy=http://127.0.0.1:3128
